overlays/production/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couple-games
spec:
  template:
    spec:
      containers:
        - name: couple-games
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
