overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couple-games
spec:
  rules:
    - host: course-app-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couple-games
                port:
                  number: 8080
